<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/cardview_default_elevation"
        app:cardCornerRadius="@dimen/cardview_default_radius"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/cardLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/lightBackgroundColor"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/thumbnailImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/thumbnail_image"
                android:scaleType="centerCrop"
                tools:src="@drawable/image" />

            <TextView
                android:id="@+id/titleTextView"
                style="@style/NormalTextStyle"
                android:layout_width="match_parent"
                android:maxLines="1"
                android:padding="@dimen/default_padding"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                tools:text="@string/tools_title" />

            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:paddingBottom="@dimen/item_padding"
                android:paddingEnd="@dimen/default_padding"
                android:paddingStart="@dimen/default_padding"
                android:textStyle="bold"
                tools:text="@string/tools_full_date" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
</layout>