<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/appbar_elevation"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize" />

        </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/emptyImageView"
                android:layout_width="@dimen/empty_favorites_size"
                android:layout_height="@dimen/empty_favorites_size"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/empty_margin_top"
                android:contentDescription="@string/empty_favorites_image"
                android:src="@drawable/cross"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/emptyTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emptyImageView"
                android:layout_marginTop="@dimen/default_padding"
                android:gravity="center"
                android:text="@string/empty_favorites_title"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/emptySubtitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/emptyTitleTextView"
                android:layout_marginTop="@dimen/default_padding"
                android:gravity="center"
                android:paddingEnd="@dimen/default_padding"
                android:paddingStart="@dimen/default_padding"
                android:text="@string/empty_favorites_subtitle"
                android:textSize="@dimen/default_text_size"
                android:visibility="invisible" />

        </RelativeLayout>
    </android.support.design.widget.CoordinatorLayout>
</layout>